loki/deployment-loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.8.2
        args:
          - "-config.file=/etc/loki/local-config.yaml"
        ports:
          - containerPort: 3100
